--- a/pokemon search/pokemon search.html
+++ b/pokemon search/pokemon search.html
@@ -16,7 +16,9 @@
       <div id="sprite-container" class="sprite-container"></div>
       <table>
         <tr>
-          <h2 class="tr-info">pokemon information</h2>
+          <th colspan="2">
+            <h3 class="tr-info">pokemon information</h3>
+          </th>
         </tr>
         <tr>
           <td class="td-text">Pokemon Name</td>
